[package]
name = "more-di"
version = "3.1.0"
edition = "2018"
authors = ["Chris Martinez <chris.s.martinez@hotmail.com>"]
description = "Provides support for dependency injection (DI)"
keywords = ["more", "di", "dependency", "injection", "ioc"]
license = "MIT"
readme = "README.md"
homepage = "https://commonsensesoftware.github.io/more-rs-di/"
repository = "https://github.com/commonsensesoftware/more-rs-di"
include = ["*.rs", "!build.rs", "README.md"]

# RUSTDOCFLAGS="--cfg docsrs"; cargo +nightly doc
[package.metadata.docs.rs]
features = ["builder", "inject", "lazy", "fmt", "alias"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "di"
path = "lib.rs"
doctest = false

[features]
default = ["builder", "inject"]
builder = []
async = []
inject = ["more-di-macros"]
lazy = []
fmt = ["colored"]
alias = ["more-di-macros/alias"]

[dependencies.more-di-macros]
path = "../di_macros"
version = "3.1"
optional = true

[dependencies.spin]
version = "0.9.8"
default-features = false
features = ["once"]

[dependencies.colored]
version = "2.0"
optional = true

[dev-dependencies]
cfg-if = "1.0"

[dev-dependencies.more-di]
path = "."
default-features = false
features = ["builder", "lazy", "fmt"]
