[package]
name = "more-di"
description = "Provides support for dependency injection (DI)"
keywords = ["more", "di", "dependency", "injection", "ioc"]
readme = "README.md"
include = ["*.rs", "!build.rs", "README.md"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# RUSTDOCFLAGS="--cfg docsrs"; cargo +nightly doc
[package.metadata.docs.rs]
features = ["builder", "inject", "lazy", "fmt", "alias"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "di"
path = "lib.rs"
doctest = false

[features]
default = ["builder", "inject"]
builder = []
async = []
inject = ["dep:more-di-macros"]
lazy = []
fmt = ["dep:colored"]
alias = ["more-di-macros/alias"]

[dependencies.more-di-macros]
path = "../di-macros"
version = "3.2"
optional = true

[dependencies]
cfg-if = "1.0"
colored = { version = "2.0", optional = true }

[dev-dependencies.more-di]
path = "."
default-features = false
features = ["builder", "lazy", "fmt"]
