[package]
name = "more-di-macros"
description = "Macro implementation of #[injectable(Trait)]"
include = ["*.rs"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "di_macros"
path = "lib.rs"
proc-macro = true
doctest = false

[features]
default = []
alias = ["toml", "serde"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
toml = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
more-di-macros = { path = ".", features = ["alias"] }
syn = { version = "2.0", features = ["extra-traits"] }