[package]
name = "more-di-tests"
version = "1.0.0"
edition.workspace = true
publish = false

[lib]
path = "lib.rs"
doc = false
doctest = false

[features]
async = ["more-di/async"]

[dependencies]
more-di = { path = "../../src/di", features = ["fmt", "lazy"] }
cfg-if.workspace = true
maybe-impl.workspace = true
